// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/elements/GraphEdge.vue snapshot initial 1`] = `
<g
  class="view-only"
  data-type="edge"
>
  <path
    d="M6,2 C25,2 -14,20 5,20"
    fill="none"
    stroke="#888"
    stroke-width="2.5"
  />
  <!--v-if-->
</g>
`;

exports[`src/components/elements/GraphEdge.vue snapshot selected 1`] = `
<g
  class="view-only"
  data-type="edge"
>
  <path
    d="M6,2 C25,2 -14,20 5,20"
    fill="none"
    stroke="orange"
    stroke-width="2.5"
  />
  <g
    fill="none"
    stroke="orange"
    stroke-width="5"
  >
    <circle
      cx="1"
      cy="2"
      r="7"
    />
    <circle
      cx="10"
      cy="20"
      r="7"
    />
  </g>
</g>
`;
